engine/test/electron/scripts/lexer/errors/invalid_number_formats.e
// ERROR TEST: Invalid number formats
0x
0b
0o
0x_
0b_
0o_
1__2
